<resources>
    <string name="app_name">Sun Application</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps2">Map</string>

    <string name="latitude_label">%f</string>
    <string name="longitude_label">%f</string>
    <string name="no_location_detected">
        No location detected. Make sure location is enabled on the device.
    </string>
    <string name="permission_denied_explanation">
        Permission was denied. However it is needed for core functionality.
    </string>
    <string name="permission_rationale">
        Location permission is needed for core functionality
    </string>
    <string name="settings">Settings</string>
    <string name="google_apis_key">AIzaSyAF2ZhdQF0UB6CPemZ64LhmwV6TieBCZNI</string>
    <string name="get_data">Get data</string>
    <string name="use_my_current_location">use my current location</string>
    <string name="button">Button</string>
    <string name="time_sunset">sunset time</string>
    <string name="time_sunrize">sunrise time</string>

</resources>
