<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@drawable/bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_main"
        tools:context=".MainActivity" android:longClickable="false">


    <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp" app:srcCompat="@drawable/dawn"
            android:id="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/divider2"
            app:layout_constraintEnd_toStartOf="@+id/guideline" app:layout_constraintStart_toStartOf="parent"
            tools:ignore="VectorDrawableCompat" android:contentDescription="TODO"/>
    <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp" app:srcCompat="@drawable/sunset"
            android:id="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/guideline" tools:ignore="VectorDrawableCompat"
            android:contentDescription="TODO"/>
    <TextView
            android:text="@string/time_sunrize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textSunrise"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/imageView" android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline"/>
    <TextView
            android:text="@string/time_sunset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textSunset"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline" app:layout_constraintTop_toTopOf="@+id/textSunrise"
            android:textSize="20sp"/>
    <Button
            android:text="@string/get_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/bntGetData"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/checkBoxLocal" android:layout_marginBottom="24dp"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp" android:layout_marginRight="32dp"
            android:layout_marginEnd="32dp"/>
    <CheckBox
            android:text="@string/use_my_current_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/checkBoxLocal"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp" android:layout_marginRight="32dp" android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp" android:textColor="@android:color/white" android:textSize="18sp"/>
    <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#00FFFFFF"
            tools:layout_editor_absoluteX="16dp"
            app:layout_constraintBottom_toTopOf="@+id/bntGetData" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.521"/>
    <Button
            android:text="@string/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            app:layout_constraintBottom_toTopOf="@+id/bntGetData" android:layout_marginBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginRight="32dp" android:layout_marginEnd="32dp" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp" android:visibility="invisible"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textPlaceName" tools:text="textPlaceName"
            android:textSize="24sp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/place_autocomplete_prediction_height"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textPlaseAdress"
            android:textSize="18sp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textPlaceName" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp" android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            android:paddingLeft="@dimen/fab_margin" android:paddingRight="@dimen/fab_margin"/>
    
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline" app:layout_constraintGuide_begin="205dp"
                                                android:orientation="vertical"
                                                app:layout_constraintStart_toStartOf="parent"
                                                app:layout_constraintHorizontal_bias="0.5"
                                                app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="by GMT  (Greenwich Mean Time)"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/textSunset" android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>